--- a/.github/workflows/LinuxQuickBuild.yml
+++ b/.github/workflows/LinuxQuickBuild.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Linting FuzzyLite
+        run: make lint
+
       - name: Restore cmake dependencies
         id: cache-restore-cmake-deps
         uses: actions/cache/restore@v4
@@ -29,9 +32,14 @@ jobs:
         env:
           CXX: ${{ matrix.use_cxx }}
         run: |
-          cmake -B build/ -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
+          cmake -B build/ -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_BUILD_COVERAGE=ON.
           cmake --build build/ --parallel
           ctest --test-dir build/
+
+      - name: Coverage
+        run: |
+          pip install gcovr
+          make coverage_coveralls
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
@@ -41,3 +49,13 @@ jobs:
           path: |
             build/_deps
           key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
+
+  coveralls:
+    needs: build
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          file: build/coveralls.json
