--- a/.github/workflows/LinuxQuickBuild.yml
+++ b/.github/workflows/LinuxQuickBuild.yml
@@ -36,10 +36,10 @@ jobs:
           cmake --build build/ --parallel
           ctest --test-dir build/
 
-      - name: Coverage
-        run: |
-          pip install gcovr
-          GCOV=llvm-cov gcov make coverage_coveralls
+#      - name: Coverage
+#        run: |
+#          pip install gcovr
+#          GCOV="llvm-cov gcov" make coverage_coveralls
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
@@ -50,12 +50,12 @@ jobs:
             build/_deps
           key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
 
-  coveralls:
-    needs: build
-    if: ${{ always() }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Coveralls
-        uses: coverallsapp/github-action@v2
-        with:
-          file: build/coveralls.json
+#  coveralls:
+#    needs: build
+#    if: ${{ always() }}
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Coveralls
+#        uses: coverallsapp/github-action@v2
+#        with:
+#          file: build/coveralls.json
