--- a/.github/workflows/MacQuickBuild.yml
+++ b/.github/workflows/MacQuickBuild.yml
@@ -30,6 +30,11 @@ jobs:
           cmake --build build/ --parallel
           ctest --test-dir build/
 
+      - name: Coverage
+        run: |
+          pip install gcovr
+          make coverage_coveralls
+
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
         id: cache-save-cmake-deps
@@ -38,3 +43,13 @@ jobs:
           path: |
             build/_deps
           key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
+
+  coveralls:
+    needs: build
+    if: ${{ always() }}
+    runs-on: macos-latest
+    steps:
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          file: build/coveralls.json
