--- a/.github/workflows/LinuxMediumBuild.yml
+++ b/.github/workflows/LinuxMediumBuild.yml
@@ -31,9 +31,9 @@ jobs:
         env:
           CXX: ${{ matrix.use_cxx }}
         run: |
-          cmake -B build/ -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
-          cmake --build build/ --parallel
-          ctest --test-dir build/
+          make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
+          make build
+          make test
 
       - name: Coverage
         if: ${{ matrix.use_cxx == 'clang++-15' && matrix.build_type == 'release' && matrix.use_cpp98 == 'OFF' && matrix.use_float == 'OFF' }}
@@ -41,10 +41,9 @@ jobs:
           CXX: "clang++-15"
           GCOV: "llvm-cov-15 gcov"
         run: |
-          echo '${{matrix}}'
-          cmake -B build/ -DFL_BUILD_COVERAGE=ON .
-          cmake --build build/ --parallel --target fl-test
-          ctest --test-dir build/
+          make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }} COVERAGE=ON
+          make build
+          make test
           pip install gcovr
           make coverage
 
