--- a/.github/workflows/MacQuickBuild.yml
+++ b/.github/workflows/MacQuickBuild.yml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Building FuzzyLite
         run: |
-          cmake -B build/ -G"Xcode" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
-          cmake --build build/ --parallel
-          ctest --test-dir build/
+          make configure G="Xcode" BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
+          make build
+          make test
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
