--- a/.github/workflows/WindowsQuickBuild.yml
+++ b/.github/workflows/WindowsQuickBuild.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Building FuzzyLite
         shell: cmd
         run: |
-          cmake -B build/ -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
-          cmake --build build/ --parallel
-          ctest --test-dir build/
+          nmake configure BUILD=${{ matrix.build_type }}
+          nmake build
+          nmake test
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
