--- a/.github/workflows/MacFullBuild.yml
+++ b/.github/workflows/MacFullBuild.yml
@@ -54,8 +54,10 @@ jobs:
           key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
+        env:
+          CMAKE_GENERATOR: "Unix Makefiles"
         run: |
-          make configure G="Unix Makefiles" BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
+          make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
           make build
           make test
 
@@ -84,7 +86,8 @@ jobs:
       - name: Building FuzzyLite
         env:
           CXX: g++-${{ matrix.compiler_version }}
+          CMAKE_GENERATOR: "Unix Makefiles"
         run: |
-          make configure G="Unix Makefiles" BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
+          make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
           make build
           make test
