Cross-platform Makefile (#146)
* Default Generator

* Fix: Ignore cache for Mac

* Fix: Windows nmake

* Windows: NMake build

* test-only: Reuse build

* Rename fuzzylite-config.cmake to fuzzylite.cmake

--- a/.github/workflows/MacMediumBuild.yml
+++ b/.github/workflows/MacMediumBuild.yml
@@ -28,6 +28,6 @@ jobs:
 
       - name: Building FuzzyLite
         run: |
-          cmake -B build/ -G"Xcode" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
-          cmake --build build/ --parallel
-          ctest --test-dir build/
+          make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
+          make build
+          make test
