--- a/.github/workflows/LinuxQuickBuild.yml
+++ b/.github/workflows/LinuxQuickBuild.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-#      - name: Linting FuzzyLite
-#        run: make lint
+      #      - name: Linting FuzzyLite
+      #        run: make lint
 
       - name: Restore cmake dependencies
         id: cache-restore-cmake-deps
@@ -32,9 +32,9 @@ jobs:
         env:
           CXX: ${{ matrix.use_cxx }}
         run: |
-          cmake -B build/ -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_BUILD_COVERAGE=ON.
-          cmake --build build/ --parallel
-          ctest --test-dir build/
+          make configure BUILD=${{ matrix.build_type }} COVERAGE=ON
+          make build
+          make test
 
       - name: Coverage
         env:
