--- a/.github/workflows/MacFullBuild.yml
+++ b/.github/workflows/MacFullBuild.yml
@@ -28,9 +28,9 @@ jobs:
 
       - name: Building FuzzyLite
         run: |
-          cmake -B build/ -G"Xcode" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
-          cmake --build build/ --parallel
-          ctest --test-dir build/
+          make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
+          make build
+          make test
 
   build-clang:
     runs-on: macos-latest
@@ -45,19 +45,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Restore cmake dependencies
-        id: cache-restore-cmake-deps
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            build/_deps
-          key: ${{ runner.os }}-cmake-deps
+      # Not restoring because dependency would have been built with Xcode
+      #      - name: Restore cmake dependencies
+      #        id: cache-restore-cmake-deps
+      #        uses: actions/cache/restore@v4
+      #        with:
+      #          path: |
+      #            build/_deps
+      #          key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
+        env:
+          CMAKE_GENERATOR: "Unix Makefiles"
         run: |
-          cmake -B build/ -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
-          cmake --build build/ --parallel
-          ctest --test-dir build/
+          make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
+          make build
+          make test
 
   build-gcc:
     runs-on: ubuntu-latest
@@ -73,18 +76,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Restore cmake dependencies
-        id: cache-restore-cmake-deps
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            build/_deps
-          key: ${{ runner.os }}-cmake-deps
+      # Not restoring because dependency would have been built with Xcode
+      #      - name: Restore cmake dependencies
+      #        id: cache-restore-cmake-deps
+      #        uses: actions/cache/restore@v4
+      #        with:
+      #          path: |
+      #            build/_deps
+      #          key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
         env:
           CXX: g++-${{ matrix.compiler_version }}
+          CMAKE_GENERATOR: "Unix Makefiles"
         run: |
-          cmake -B build/ -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
-          cmake --build build/ --parallel
-          ctest --test-dir build/
+          make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }}
+          make build
+          make test
