--- a/.github/workflows/LinuxFullBuild.yml
+++ b/.github/workflows/LinuxFullBuild.yml
@@ -6,12 +6,12 @@ on:
 
 jobs:
   build-clang:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     strategy:
       fail-fast: false
       matrix:
-        compiler_version: [ "13", "14", "15" ]
+        compiler_version: [ "16", "17", "18" ]
         build_type: [ "release", "debug" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
@@ -41,7 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler_version: [ "9", "10", "11", "12", "13" ]
+        compiler_version: [ "12", "13", "14" ]
         build_type: [ "release" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
