--- a/.github/workflows/LinuxMediumBuild.yml
+++ b/.github/workflows/LinuxMediumBuild.yml
@@ -6,13 +6,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     strategy:
       fail-fast: false
       matrix:
         build_type: [ "release" ]
-        use_cxx: [ "clang++-15", "g++-13" ]
+        use_cxx: [ "clang++-18", "g++-14" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
 
@@ -36,15 +36,14 @@ jobs:
           make test
 
       - name: Coverage
-        if: ${{ matrix.use_cxx == 'clang++-15' && matrix.build_type == 'release' && matrix.use_cpp98 == 'OFF' && matrix.use_float == 'OFF' }}
+        if: ${{ matrix.use_cxx == 'clang++-18' && matrix.build_type == 'release' && matrix.use_cpp98 == 'OFF' && matrix.use_float == 'OFF' }}
         env:
-          CXX: "clang++-15"
-          GCOV: "llvm-cov-15 gcov"
+          CXX: "clang++-18"
+          GCOV: "llvm-cov-18 gcov"
         run: |
           make configure BUILD=${{ matrix.build_type }} CPP98=${{ matrix.use_cpp98 }} FLOAT=${{ matrix.use_float }} COVERAGE=ON
           make build
           make test
-          pip install gcovr
           make coverage
 
       - name: Coveralls
