Build on all c++ versions

--- a/.github/workflows/Checks.yml
+++ b/.github/workflows/Checks.yml
@@ -17,11 +17,16 @@ jobs:
 
   strict-build:
     runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        standard: [98, 11, 14, 17, 20, 23]
     steps:
       - uses: actions/checkout@v4
       - name: Strict build
         env:
           CXX: "clang++-18"
+          CXX_STANDARD: ${{ matrix.standard }}
         run: |
           make configure BUILD=release TESTS=OFF STRICT=ON
           make build
